<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SpinnerActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTitle"
        app:title="@string/toolbarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <Spinner
        android:id="@+id/spinnerElecciones"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/buttonVotos"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/buttonVotos" />

    <Button
        android:id="@+id/buttonVotosFinal"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/buttonVotosFinal" />


</LinearLayout>